--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +12,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "emailjs-com": "^3.2.0",
     "mdb-react-ui-kit": "^5.0.0",
     "mdbreact": "^5.2.0",
     "react": "^18.2.0",
@@ -20,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "serve": "^14.1.2",
     "web-vitals": "^2.1.4"
